@@ -8,16 +8,8 @@ subprojects {
         apply plugin: "java"
 
         java {
-            sourceCompatibility = JavaVersion.VERSION_21
-            targetCompatibility = JavaVersion.VERSION_21
-        }
-
-        tasks.withType(JavaCompile).configureEach {
-            options.compilerArgs.add('--enable-preview')
-        }
-
-        tasks.withType(Test).configureEach {
-            jvmArgs('--enable-preview')
+            sourceCompatibility = JavaVersion.VERSION_25
+            targetCompatibility = JavaVersion.VERSION_25
         }
     }
 
